# snaic-ai-ecobrew-llm-asst

./: .gitignore  CLAUDE.md  README.md  TESTs.md  main.py  pyproject.toml  requirements.txt  v2_regression_log_20260715_152111.csv
app/: gradio_app.py
data/: facts.py  generate.py
data/v2/curated/: train.jsonl  valid.jsonl
data/v2/synthetic/: ecobrew_synthetic_v2.jsonl
docs/: ADR_Tech_Stack_Choices.md  EcoBrew_Closed-Book-Proposal.md  EcoBrew_Product_Facts.md  MiniProject_example_veltara_sft_dpo_t4_unsloth.ipynb  PRD_Closedbook_Product_Assitant.md  ecobrew_qa_test_plan.md  mini-project-proposal-WCS.pages
docs/superpowers/plans/: 2026-07-13-ecobrew-closedbook-assistant.md  2026-07-14-ecobrew-chat-assistant-cell-rewrite.md  2026-07-15-ecobrew-llm-assistant-m5pro.md
docs/superpowers/specs/: 2026-07-13-ecobrew-closedbook-assistant-design.md  2026-07-14-casual-phrasing-recall-fix-design.md  2026-07-14-ecobrew-chat-assistant-cell-rewrite-design.md  2026-07-14-guardrail-domain-gate-numeric-match-fix-design.md  2026-07-14-guardrail-topic-scoping-cents-tolerance-design.md  2026-07-15-cell7-lora-model-sizing-design.md  (+1 more)
evaluation/: harness.py
guardrail/: validate.py
notebooks/: EcoBrew_LLM_Assistant_M5Pro.ipynb  EcoBrew_LLM_Customization_Apple_M5_Pro.ipynb  EcoBrew_LLM_Customization_Apple_M5_Pro.ipynb.txt  ecobrew_closedbook.ipynb
scripts/: hf_predict.py  mlx_predict.py  prepare_mlx_sft_data.py  run_baseline.py  run_dpo.py  run_hf_sft.py  run_mlx_sft.py  serve.py
tests/: test_facts.py  test_generate.py  test_guardrail.py  test_harness.py
(+4 files in other folders)
