[project]
name = "snaic-ai-ecobrew-asst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "gradio>=6.20.0",
    "huggingface-hub>=1.23.0",
    "ipykernel>=7.3.0",
    "mlx>=0.32.0",
    "mlx-lm>=0.31.3",
    "peft>=0.19.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "transformers>=5.13.1",
    "trl>=1.8.0",
]
